@@ -1,5 +1,6 @@
 v1.5.1 (WIP)
 - Add Slider
+- Add Application.GetScreen and Application.GetScreenSize
 - Add TextView.SetBytes and TextView.GetBytes
 - Add TableCell.SetBytes, TableCell.GetBytes and TableCell.GetText
 - Fix List.Transform not calling handler set via SetChangedFunc
